<resources>
    <string name="app_name" translatable="false">ELBAT</string>
    <string name="nav_greeting">Hello %1$s 🍽</string>
    <string name="action_save">Save</string>

    <string name="menu_map">Book a table</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_my_bookings">My bookings</string>
    <string name="menu_covid_positive">Covid-19</string>
    <string name="app_name_full" translatable="false">Easy Lunch - Book a Table</string>
    <string name="menu_exit">Log out</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Username not valid</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login</string>
    <string name="http_no_connection">No Connection; Check your connectivity</string>
    <string name="technical_error">An unknown error happened ; Try again</string>
    <string name="action_register">Register</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="other">Other</string>
    <string name="birth_date">Birthdate</string>
    <string name="phone_number">Phone Number</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="locality">Locality</string>
    <string name="country">Country</string>
    <string name="elbat_icon_desription">ELBAT icon</string>
    <string name="usernameError">Username is mandatory !</string>
    <string name="invalid_lastName">Lastname is mandatory and can only contains letters</string>
    <string name="invalid_firstName">Firstname is mandatory and can only contains letters</string>
    <string name="invalid_email">Email is mandatody and must contains a @</string>
    <string name="invalid_phoneNumber">Phone number is mandatory and can only contain numbers (not +, not /, not .)</string>
    <string name="invalid_field">This field is mandatory !</string>
    <string name="invalid_password_confirm">This field is mandatory and must be the same as password</string>
    <string name="enter_date">Enter Date</string>
    <string name="error_400_add_customer">Bad request for adding customer</string>
    <string name="error_500">Server error</string>
    <string name="user_created">User created</string>
    <string name="birthDate_age">You must be 18 years old at least !</string>
    <string name="choose_date">Chosen date%1$s</string>
    <string name="choose_arrival_time">Arrival time%1$s</string>
    <string name="prompt_guests_number">Number of guests</string>
    <string name="requests_for_waiter">Requests for the waiter to best manage your experience</string>
    <string name="accept_button">Booking</string>
    <string name="table_is_outside">The table must be outside</string>
    <string name="address">Address</string>
    <string name="update_password">Update password</string>
    <string name="update_user_data">Update user data</string>
    <string name="error_400_load_user">Bad request for loading user</string>
    <string name="error_404_load_user">User not found</string>
    <string name="my_account">My account</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save_update_password">Save</string>
    <string name="registration">Registration</string>
    <string name="password_updated">Password updated</string>
    <string name="error_400_update_password">Bad request for updating password</string>
    <string name="error_403_forbidden">Forbidden action</string>
    <string name="error_404_update_password">The user is not found to update his password</string>
    <string name="error_401_unauthorized">Unauthorized action</string>
    <string name="invalid_birth_date">Birthdate is mandatory !</string>
    <string name="data_updated">User data updated</string>
    <string name="error_400_update_user_data">Bad request for updating user data</string>
    <string name="error_404_update_user_data">User or address to update not found</string>
    <string name="error_400_load_bookings">Bad request for loading bookings</string>
    <string name="bookings_loaded">Bookings loaded</string>
    <string name="booking_date">Date</string>
    <string name="establishment_name">Establishment</string>
    <string name="nb_person">Number of persons</string>
    <string name="date_text_details">Date and time</string>
    <string name="table_text_details">Table outside</string>
    <string name="nb_person_text_details">Number of clients</string>
    <string name="additional_info">Establishment\'s informations</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_400_cancel_booking">Bad request for cancelled booking</string>
    <string name="error_404_cancel_booking">Booking to cancel not found</string>
    <string name="booking_cancelled">Booking is cancel</string>
    <string name="error_404_load_bookings">No booking</string>
    <string name="bookings_to_come">Bookings to come</string>
    <string name="past_or_canceled_bookings">Past or canceled bookings</string>
    <string name="no_connection_logo_label">No connection logo</string>
    <string name="channel_name">Notification ELBAT Covid 19</string>
    <string name="channel_description">Notification informing that the client has been in contact with a positive person for covid 19</string>
    <string name="notification_title">ELBAT alert</string>
    <string name="notification_text">You have been in contact with someone positive for covid 19</string>
    <string name="positif_to_covid">If you have been in contact with someone positive for covid 19 or if you are positive yourself, please click this button. This will allows us to inform customers who visited our establishment at the same time as you.</string>
    <string name="risk_contact">Alert Covid 19</string>
    <string name="covid_title">Covid</string>
    <string name="error_400_covid">Bad request for update statut covid</string>
    <string name="error_404_update_covid">User not found to update his covid status</string>
    <string name="covid_positive">We have safeguarded you are a risk person</string>
    <string name="positif_to_covid_change">We have registered that you are a person at risk. Thank you and have a nice day.</string>
    <string name="go_back_home">Return to home page</string>
    <string name="error_400_check_covid">Bad request for checking risk contact</string>
    <string name="error_404_check_covid">User not found for checking risk contact</string>
    <string name="places" translatable="false">%dp.</string>
    <string name="no_bookings">You don\'t have any booking for this section</string>
    <string name="no_table_available">There is no table available for this configuration</string>
    <string name="must_fill_all">You must fill all required values before booking</string>
    <string name="booking_created">Booking created</string>
    <string name="bad_credentials">Unable to login. Please check your credentials</string>
    <!-- Strings related to login -->
</resources>