<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_menu_restaurant"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_menu_booking"
            android:title="@string/menu_my_bookings" />
        <item
            android:id="@+id/nav_corona"
            android:icon="@drawable/ic_menu_virus"
            android:title="@string/menu_covid_positive" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_back"
            android:title="@string/menu_exit" />
    </group>
</menu>