<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookings.BookingsListFragment"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/error_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_error" />

       <LinearLayout
           android:id="@+id/row_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/booking_date"
               android:textSize="20dp"
               android:textStyle="bold"/>

           <Space
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/establishment_name"
               android:textSize="20dp"
               android:textStyle="bold"/>

           <Space
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/nb_person"
               android:textSize="20dp"
               android:textStyle="bold"/>

       </LinearLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/bookings_list"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

       </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>