<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/error_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center"
                android:textSize="20dp"
                android:drawableLeft="@drawable/ic_error" />

            <TextView
                android:id="@+id/name_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:layout_gravity="center"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/email_address_account"
                    android:text="@string/email" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/email_address_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:autofillHints="email"
                    android:importantForAutofill="yes"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/username_account"
                    android:text="@string/prompt_username" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/username_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:autofillHints="username"
                    android:ems="10"
                    android:inputType="text"
                    android:importantForAutofill="yes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/birth_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/birth_date_account"
                    android:text="@string/birth_date"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/birth_date_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:paddingRight="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/phone_number_account"
                    android:text="@string/phone_number" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/phone_number_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:inputType="phone"
                    android:ems="10"
                    android:importantForAutofill="yes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/address_account"
                    android:layout_weight="1"
                    android:text="@string/address" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/address_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="street"
                    android:inputType="text"
                    android:ems="10"
                    android:importantForAutofill="yes" />
            </LinearLayout>

            <Button
                android:id="@+id/update_password_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_password" />

            <Button
                android:id="@+id/update_user_data_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/update_user_data" />

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>